--- a/src/main/resources/remoting/deployingActorsRemotely.conf
+++ b/src/main/resources/remoting/deployingActorsRemotely.conf
@@ -8,6 +8,16 @@ localApp {
         /remoteActor {
           remote = "akka://RemoteActorSystem@localhost:2552"
         }
+
+        "/parent/*" { // any actor under the /parent path will be deployed remotly
+          remote = "akka://RemoteActorSystem@localhost:2552"
+        }
+
+        /routerWithRemoteChildren {
+          router = round-robin-pool
+          nr-of-instances = 10
+          target.nodes = ["akka://LocalActorSystem@localhost:2551", "akka://RemoteActorSystem@localhost:2552"] // will deploy children evenly among nodes
+        }
       }
     }
 
