Add actor watcher

--- a/src/main/resources/remoting/deployingActorsRemotely.conf
+++ b/src/main/resources/remoting/deployingActorsRemotely.conf
@@ -18,6 +18,10 @@ localApp {
           nr-of-instances = 10
           target.nodes = ["akka://LocalActorSystem@localhost:2551", "akka://RemoteActorSystem@localhost:2552"] // will deploy children evenly among nodes
         }
+
+        /watcher/remoteChild {
+          remote = "akka://RemoteActorSystem@localhost:2552"
+        }
       }
     }
 
