Add join to cluster programmatically

--- a/src/main/resources/clustering/clusteringBasics.conf
+++ b/src/main/resources/clustering/clusteringBasics.conf
@@ -15,3 +15,20 @@ akka {
     seed-nodes = ["akka://BaseCluster@localhost:2551", "akka://BaseCluster@localhost:2552"]
   }
 }
+
+manualRegistration {
+  akka {
+    actor {
+      provider = cluster
+    }
+
+    remote {
+      artery {
+        enabled = on
+        transport = aeron-udp
+        canonical.hostname = "localhost"
+        canonical.port = 2555
+      }
+    }
+  }
+}
