--- a/src/main/resources/clustering/clusteringBasics.conf
+++ b/src/main/resources/clustering/clusteringBasics.conf
@@ -30,5 +30,9 @@ manualRegistration {
         canonical.port = 2555
       }
     }
+
+    cluster {
+      roles = ["numberCruncher"]
+    }
   }
 }
