--- a/src/main/resources/remoting/remoteActorsExercise.conf
+++ b/src/main/resources/remoting/remoteActorsExercise.conf
@@ -1,6 +1,12 @@
 akka {
   actor {
     provider = remote
+
+    deployment {
+      "/wordCountMaster/*" {
+        remote = "akka://WorkersSystem@localhost:2552"
+      }
+    }
   }
 
   remote {
