--- a/src/main/resources/remoting/remoteActorsExercise.conf
+++ b/src/main/resources/remoting/remoteActorsExercise.conf
@@ -3,6 +3,12 @@ akka {
     provider = remote
 
     deployment {
+      /wordCountMaster/workerRouter {
+        router = round-robin-pool
+        nr-of-instances = 10
+        target.nodes = ["akka://WorkersSystem@localhost:2552"] // will deploy children evenly among nodes
+      }
+
       "/wordCountMaster/*" {
         remote = "akka://WorkersSystem@localhost:2552"
       }
