Group cluster aware router

--- a/src/main/resources/clustering/clusterAwareRouters.conf
+++ b/src/main/resources/clustering/clusterAwareRouters.conf
@@ -39,3 +39,22 @@ masterWithRouterApp {
     remote.artery.canonical.port = 2555
   }
 }
+
+masterWithGroupRouterApp {
+  akka {
+    actor.deployment {
+      /master/clusterAwareRouter {
+        router = round-robin-group
+        routees.paths = ["/user/worker"]
+
+        // make the router cluster-aware
+        cluster {
+          enabled = on
+          allow-local-routees = off
+        }
+      }
+    }
+
+    remote.artery.canonical.port = 2555
+  }
+}
